@@ -184,6 +184,10 @@ $pgv_lang["index_portal_help"]			= "The Welcome page consists of several separat
 $pgv_lang["index_welcome_help"]			= "~WELCOME BLOCK~<br />The Welcome block shows you the current database title, the date and time, and, if enabled by the admin, the Hit Counter.<br /><br />The Hit Counter is only available in the Welcome block and on the #pgv_lang[indi_info]# page.  The counter counts the \"Hits\" of these pages. That means it counts how many times these pages are visited.  The counter does not check the Internet address of a visitor; every visit to a page from <u>any</u> remote location counts as another Hit.<br /><br />";
 $pgv_lang["index_login_help"]			= "~LOGIN BLOCK~<br />You can login on almost every page of this program. You will usually do so on the first page, since you can only access privileged information when you are logged in.<br /><br />You can login by typing your <b>username</b> and <b>password</b> and then clicking the Login button.<br /><br />";
 $pgv_lang["index_events_help"]			= "~UPCOMING EVENTS BLOCK~<br />This block shows you anniversaries of events that are coming up in the near future.<br /><br />The administrator determines how far ahead the block will look.  You can further refine the block's display of upcoming events through several configuration options.<br /><br />";
+$pgv_lang["todo_help"] = "~&quot;TO DO&quot; BLOCK~<br />The &quot;To Do&quot; block helps you keep track of _TODO tasks in your gedcom.  To add &quot;To Do&quot; tasks to your records, you may first need to include _TODO in the list of available facts in your GEDCOM configuration.<br /><br />";
+$pgv_lang['todo_show_other_help']     = "Show &quot;To Do&quot; tasks assigned to other users";
+$pgv_lang['todo_show_unassigned_help']= "Show &quot;To Do&quot; tasks that are not assigned to any user";
+$pgv_lang['todo_show_future_help']= "Show &quot;To Do&quot; tasks that have a date in the future.  Otherwise only items with a date in the past are shown.";
 $pgv_lang["yahrzeit_help"]			="~YAHRZEITEN BLOCK~<br />This block shows you Yahrzeiten that are coming up in the near future.<br /><br />Yahrzeiten (singular: Yahrzeit) are anniversaries of a person's death.  These anniversaries are observed in the Jewish tradition; they are no longer in common use in other traditions.  «Yahrzeit» can also be spelled «Jahrzeit» or «Yartzeit».<br /><br />The Administrator determines how far ahead the block will look.  You can further refine the block's display of upcoming Yahrzeiten through configuration options.<br /><br />";
 $pgv_lang["days_to_show_help"]			= "~#pgv_lang[days_to_show]#~<br /><br />Enter the number of days to show.  This number cannot be greater than <b>#DAYS_TO_SHOW_LIMIT#</b>.  If you enter a larger value, that limit will be used.<br /><br />The limit shown is set by the administrator in the GEDCOM configuration, Display and Layout section, Hide &amp; Show sub-section.";
 $pgv_lang["random_media_persons_or_all_help"] = "~#pgv_lang[random_media_persons_or_all]#~<br /><br />This option lets you determine the type of media to show.<br /><br />When you select <b>#pgv_lang[random_media_persons]#</b>, only media associated with persons will be shown.  Usually, this would be a person's photograph.  When you select <b>#pgv_lang[random_media_events]#</b>, only media associated with facts or events will be shown.  This might be an image of a certificate.  When you select <b>#pgv_lang[all]#</b>, this block will show all types of media.";
